--- a/SerialSync/Components/Pages/LeftAndRight.razor
+++ b/SerialSync/Components/Pages/LeftAndRight.razor
@@ -1,24 +1,32 @@
-﻿@if(LogIsRight)
+﻿@using BlazorAnimate
+@if(LogIsRight)
 {
-    <RegionOfLog></RegionOfLog>
+    <Animate Animation="Animations.FadeLeft" DurationMs="600">
+        <RegionOfLog></RegionOfLog>
+    </Animate>
 }
 else
 {
-    <SplitContainer TSize="int" Orientation="SplitterOrientation.Horizontal" Style="width:100%; height:100%;"  @bind-FirstPaneSize=PortAndUser FirstPaneMinSize="20" UnitOfPaneSize="UnitOfPaneSize.Percent">
+    <SplitContainer TSize="int" Orientation="SplitterOrientation.Horizontal" Style="width:100%; height:100%;"  @bind-FirstPaneSize=Home.PortAndUser FirstPaneMinSize="20" UnitOfPaneSize="UnitOfPaneSize.Percent">
         <FirstPane>
-            <DynamicComponent Type="@(UserSettingIsTop ? typeof(UserSetting) : typeof(SerialPortSetting))" />
+            <Animate Animation="Animations.Fade" DurationMs="600">
+                <DynamicComponent Type="@(Home.UserSettingIsTop ? typeof(UserSetting) : typeof(SerialPortSetting))" />
+            </Animate>
         </FirstPane>
         <SecondPane>
-            <DynamicComponent Type="@(!UserSettingIsTop ? typeof(UserSetting) : typeof(SerialPortSetting))" />
+            <Animate Animation="Animations.Fade" DurationMs="600">
+                <DynamicComponent Type="@(!Home.UserSettingIsTop ? typeof(UserSetting) : typeof(SerialPortSetting))" />
+            </Animate>
         </SecondPane>
     </SplitContainer>
 }
 @code
 {
+    [CascadingParameter]
+    private Home Home { get; set; } = null!;
     [Parameter]
-    public bool LogIsRight{get;set;}
-    [Parameter]
-    public bool UserSettingIsTop { get; set; }
-    [Parameter]
-    public int PortAndUser{ get; set; }
+    public bool LogIsRight{ get; set; }
 }
+<style>
+
+</style>
