--- a/SerialSync/Components/Pages/UserSetting.razor
+++ b/SerialSync/Components/Pages/UserSetting.razor
@@ -8,12 +8,8 @@
 			<MudButton Class="button" OnClick="SendIsTop">接收@("<->")发送</MudButton>
 			<MudButton Class="button" OnClick="UserSettingIsTop">串口@("<->")布局</MudButton>
 			<MudButtonGroup Color="Color.Primary" Variant="Variant.Outlined" FullWidth>
-				<MudButton Class="button">保存</MudButton>
+				<MudButton Class="button">日志</MudButton>
 				<MudButton Class="button">明暗</MudButton>
-			</MudButtonGroup>
-			<MudButtonGroup Color="Color.Primary" Variant="Variant.Outlined" FullWidth>
-				<MudButton Class="button">日志目录</MudButton>
-				<MudButton Class="button">清空日志</MudButton>
 			</MudButtonGroup>
 			<MudButton Class="button" OnClick="ShowMaker">开发者的....😊</MudButton>
 		</MudButtonGroup>
@@ -26,17 +22,17 @@
 	private Home Home { get; set; } = null!;
 	public async Task LogIsRight()
 	{
-		Home.LogIsRight = !Home.LogIsRight;
+		Home.LayoutInfo.LogIsRight = !Home.LayoutInfo.LogIsRight;
 		await Home.ReRender();
 	}
 	public async Task SendIsTop()
 	{
-		Home.SendIsTop = !Home.SendIsTop;
+		Home.LayoutInfo.SendIsTop = !Home.LayoutInfo.SendIsTop;
 		await Home.ReRender();
 	}
 	public async Task UserSettingIsTop()
 	{
-		Home.UserSettingIsTop= !Home.UserSettingIsTop;
+		Home.LayoutInfo.UserSettingIsTop= !Home.LayoutInfo.UserSettingIsTop;
 		await Home.ReRender();
 	}
 	public async Task  ShowMaker()=>await DialogService.ShowAsync<MakerDialog>("制作人",options:Settings.DialogOptions);
