--- a/SerialSync/Components/_Imports.razor
+++ b/SerialSync/Components/_Imports.razor
@@ -11,3 +11,6 @@
 @* This is "_Imports.razor" *@
 @using Toolbelt.Blazor.Splitter.V2
 @using SerialSync.Services
+@using ElegantSeries
+@using ElegantSeries.Enums
+@using Microsoft.Extensions.Logging
