--- a/SerialSync/Components/Pages/RegionOfAcceptance.razor
+++ b/SerialSync/Components/Pages/RegionOfAcceptance.razor
@@ -1,5 +1,28 @@
-﻿<h3>RegionOfAcceptance</h3>
+﻿@inject GlobalState GlobalState
+<div class="pa-2" style="width:100%;height:100%">
+<MudPaper Class="pa-2" Width="100%" Height="100%" Outlined>
+        <MudText Align="Align.Center" Typo="Typo.h6" Color="Color.Primary" Style="font-weight:600">接收区</MudText>
+        <MudDivider></MudDivider>
+        @foreach (var item in strings)
+        {
+                <MudGrid>
+                <MudItem Class="d-flex" xs="9">
+            <MudText Typo="Typo.subtitle2">@item</MudText>
+                </MudItem>
+                <MudItem Class="d-flex" xs="3">
+                <MudText>@DateTime.Now</MudText>
+                </MudItem>
+                </MudGrid>
+            <MudDivider></MudDivider>
+        }
+</MudPaper>
+</div>
 
 @code {
-
+    private MauiSerialPort MauiSerialPort { get; set; } = new MauiSerialPort();
+    string[] strings = { "暂未检测到串口","123das","王硕"};
+    protected override void OnInitialized()
+    {
+        
+    }
 }
