--- a/SerialSync/Components/Pages/RegionOfLog.razor
+++ b/SerialSync/Components/Pages/RegionOfLog.razor
@@ -1,5 +1,6 @@
-﻿<h3>RegionOfLog</h3>
-
-@code {
-
-}
+﻿<div class="pa-2" style="width:100%;height:100%">
+    <MudPaper Class="pa-2" Width="100%" Height="100%" Outlined>
+        <MudText Align="Align.Center" Typo="Typo.h6" Color="Color.Primary" Style="font-weight:600">日志</MudText>
+        <MudDivider></MudDivider>
+    </MudPaper>
+</div>
