--- a/SerialSync/Components/Pages/RegionOfLog.razor
+++ b/SerialSync/Components/Pages/RegionOfLog.razor
@@ -4,3 +4,10 @@
         <MudDivider></MudDivider>
     </MudPaper>
 </div>
+
+@code{
+    public void Read()
+    {
+       var lines=File.ReadAllLinesAsync(Settings.LogPath);
+    }
+}
