--- a/SerialSync/Components/_Imports.razor
+++ b/SerialSync/Components/_Imports.razor
@@ -10,7 +10,8 @@
 @using MudBlazor
 @* This is "_Imports.razor" *@
 @using Toolbelt.Blazor.Splitter.V2
-@using SerialSync.Services
+
+@using SerialSync.Misc
 @using ElegantSeries
 @using ElegantSeries.Enums
 @using Microsoft.Extensions.Logging
