--- a/SerialSync/Components/Pages/Home.razor
+++ b/SerialSync/Components/Pages/Home.razor
@@ -1,6 +1,5 @@
 ﻿@page "/"
 @inject ILogger<Home> Logger
-@inject GlobalState GlobalState
 @using BlazorAnimate
 @using SerialSync.Misc
 @using SerialSync.Models
@@ -9,29 +8,29 @@
 <CascadingValue Value="this"> 
     <Width xs="12"  Class="pa-4">
         <MudPaper Outlined Style="border:solid 2px">
-            <SplitContainer   TSize="int"  Orientation="SplitterOrientation.Vertical" Style="width:100%; height:95vh;" @bind-FirstPaneSize=LayoutInfo.FirstPane   UnitOfPaneSize="UnitOfPaneSize.Percent" FirstPaneMinSize="10">
+            <SplitContainer   TSize="int"  Orientation="SplitterOrientation.Vertical" Style="width:100%; height:95vh;" @bind-FirstPaneSize=Layout.FirstPane   UnitOfPaneSize="UnitOfPaneSize.Percent" FirstPaneMinSize="10">
 
                 <FirstPane>
-                    <LeftAndRight LogIsRight=!LayoutInfo.LogIsRight ></LeftAndRight>
+                    <LeftAndRight LogIsRight=!Layout.LogIsRight ></LeftAndRight>
                 </FirstPane>
                 <SecondPane>
-                    <SplitContainer TSize="int" Orientation="SplitterOrientation.Vertical" Style="width:100%; height:100%;" @bind-SecondPaneSize=LayoutInfo.SecondPanel SecondPaneMinSize="10" UnitOfPaneSize="UnitOfPaneSize.Percent">
+                    <SplitContainer TSize="int" Orientation="SplitterOrientation.Vertical" Style="width:100%; height:100%;" @bind-SecondPaneSize=Layout.SecondPanel SecondPaneMinSize="10" UnitOfPaneSize="UnitOfPaneSize.Percent">
                         <FirstPane>
-                            <SplitContainer TSize="int" Orientation="SplitterOrientation.Horizontal" Style="width:100%; height:100%;" @bind-FirstPaneSize=LayoutInfo.AcceptAndSend FirstPaneMinSize=20 UnitOfPaneSize="UnitOfPaneSize.Percent">
+                            <SplitContainer TSize="int" Orientation="SplitterOrientation.Horizontal" Style="width:100%; height:100%;" @bind-FirstPaneSize=Layout.AcceptAndSend FirstPaneMinSize=20 UnitOfPaneSize="UnitOfPaneSize.Percent">
                                 <FirstPane>
                                     <Animate Animation="Animations.FadeDown" DurationMs="600">
-                                        <DynamicComponent Type="@(LayoutInfo.SendIsTop ? typeof(RegionOfSend) : typeof(RegionOfAcceptance))" />
+                                        <DynamicComponent Type="@(Layout.SendIsTop ? typeof(RegionOfSend) : typeof(RegionOfAcceptance))" />
                                     </Animate>
                                 </FirstPane>
                                 <SecondPane>
                                     <Animate Animation="Animations.FadeUp" DurationMs="600">
-                                        <DynamicComponent Type="@(!LayoutInfo.SendIsTop ? typeof(RegionOfSend) : typeof(RegionOfAcceptance))" />
+                                        <DynamicComponent Type="@(!Layout.SendIsTop ? typeof(RegionOfSend) : typeof(RegionOfAcceptance))" />
                                     </Animate>
                                 </SecondPane>
                             </SplitContainer>
                         </FirstPane>
                         <SecondPane>
-                            <LeftAndRight  LogIsRight=LayoutInfo.LogIsRight></LeftAndRight>
+                            <LeftAndRight  LogIsRight=Layout.LogIsRight></LeftAndRight>
                         </SecondPane>
                     </SplitContainer>
                 </SecondPane>
@@ -40,13 +39,15 @@
     </Width>
 </CascadingValue>
 @code {
-    public LayoutInfo LayoutInfo { get; set; } = new LayoutInfo();
+    public LayoutInfo Layout { get; set; } = new LayoutInfo();
     protected override Task OnInitializedAsync()
     {
-        LayoutInfo=GlobalState.LayoutInfo;
+        Layout=LayoutInfo.Layout;
         return base.OnInitializedAsync();
     }
-    public void Save() => Unilities.SaveLayoutInfo(LayoutInfo);
+    public void Save() => LayoutInfo.SaveLayoutInfo(Layout);
+    public void Load() => Layout=LayoutInfo.LoadLayoutInfo();
+    
     protected override void OnAfterRender(bool firstRender)
     {
         base.OnAfterRender(firstRender);
