--- a/SerialSync/Components/Pages/RegionOfSend.razor
+++ b/SerialSync/Components/Pages/RegionOfSend.razor
@@ -1,18 +1,24 @@
 ﻿@using System.Diagnostics
+@using System.Text
 @inject IJSRuntime JSRuntime
 @inject ILogger<RegionOfSend> Logger
+@inject ISnackbar Snackbar
 <div class="pa-2" style="width:100%;height:100%">
     <MudPaper  Width="100%" Height="100%" Outlined>
-        <SplitContainer @bind-FirstPaneSize=Home.LayoutInfo.SendAndSended Style="width:100%;height:100%;" FirstPaneMinSize="5" SecondPaneMinSize="5"
+        <SplitContainer @bind-FirstPaneSize=Home.Layout.SendAndSended Style="width:100%;height:100%;" FirstPaneMinSize="5" SecondPaneMinSize="5"
         UnitOfPaneSize="UnitOfPaneSize.Percent" Orientation="SplitterOrientation.Horizontal" TSize="int" >
             <FirstPane>
+                <div class="d-flex flex-column align-center justify-start" style="width:100%;height:100%">
+                    <MudText Typo="Typo.h6" Align="Align.Center" Color="Color.Primary" Style="font-weight:600">历史</MudText>
+                    <MudDivider></MudDivider>   
+                </div>
 
             </FirstPane>
             <SecondPane >
                 <div class="d-flex flex-column pa-1" style="width:100%;height:100%" id="send"  @ref=container>
                     <MudTextField  @bind-value=Text Lines="TextLines"  Variant="Variant.Outlined" Label="请输入要发送的内容">
                     </MudTextField>
-                    <MudButton Color="Color.Primary" Class="ml-auto" Variant="Variant.Outlined" >
+                    <MudButton Color="Color.Primary" Class="ml-auto" Variant="Variant.Outlined" OnClick="Send">
                         发送
                     </MudButton>
                 </div>
@@ -33,12 +39,43 @@
         if(firstRender)
         {
             await SecondPaneSize();
-           await JSRuntime.InvokeVoidAsync("tools.addResizeListener",container,DotNetObjectReference.Create(this));
+            await JSRuntime.InvokeVoidAsync("tools.addResizeListener",container,DotNetObjectReference.Create(this));
         }
         await base.OnAfterRenderAsync(firstRender);
     }
 
-
+    public void Send()
+    {
+        var serialPort = Settings.MauiSerialPort;
+        if(serialPort.IsOpen)
+        {
+            if (string.IsNullOrEmpty(Text))
+            {
+                Snackbar.Add("不能发送空的内容!", Severity.Error);
+                Logger.LogError("用户发送了空的内容");
+            }
+            else
+            {
+                try
+                {
+                    Snackbar.Add("发送成功!", Severity.Success);
+                    var content = Encoding.UTF8.GetBytes(Text);
+                    serialPort.Write(content);
+                    Settings.SendedMsg.Add(Text);
+                    Logger.LogInformation($"发送了内容:{Text}");
+                }
+                catch (Exception e)
+                {
+                    Snackbar.Add("异常发送!", Severity.Error);
+                    Logger.LogError(e.Message);
+                }
+            }
+        }
+        else
+        {
+            Snackbar.Add("暂未选择串口!", Severity.Warning);
+        }
+    }
     private async Task SecondPaneSize()
     {
         var result = await GetSecondPaneHeight();
