--- a/SerialSync/Components/Pages/SerialPortSetting.razor
+++ b/SerialSync/Components/Pages/SerialPortSetting.razor
@@ -1,8 +1,7 @@
-﻿
-@inject ISnackbar Snackbar
-@inject GlobalState GlobalState
-	<MudPaper Outlined Width="100%" Height="100%" Class="pa-1 my-1" >
-<EditForm Model="SerialPort"  style="width:100%;height: 100%;min-height:100%" classlass="pa-1" OnValidSubmit="Commit">
+﻿@inject ISnackbar Snackbar
+@inject Logger<SerialPortSetting> Logger
+<MudPaper Outlined Width="100%" Height="100%" Class="pa-1 my-1" >
+	<EditForm Model="SerialPort"  style="width:100%;height: 100%;min-height:100%" classlass="pa-1" OnValidSubmit="Commit">
 		<div class="d-flex justify-center align-center">
 			<MudTooltip Text="请设置您的串口!" Arrow Color="Color.Secondary" Class="" >
 				<MudText Align="Align.Center" Typo="Typo.h6" Color="Color.Primary" Style="font-weight:600">设置串口</MudText>
@@ -47,8 +46,8 @@
 		<div class="d-flex">
 			<MudButton ButtonType="ButtonType.Submit" Class="ml-auto" Variant="Variant.Outlined" Color="Color.Primary">@(SerialPort.IsOpen?"断开":"连接")</MudButton>
 		</div>
-</EditForm>
-	</MudPaper>
+	</EditForm>
+</MudPaper>
 @code
 {
 	private MauiSerialPort SerialPort { get; set; } = new MauiSerialPort();
@@ -56,7 +55,7 @@
 	private int[] commonBaudRates = { 300, 600, 1200, 2400, 4800, 9600, 14400, 19200, 38400, 57600, 115200, 230400, 460800, 921600 };
 	protected override void OnInitialized()
 	{
-		SerialPort = GlobalState.MauiSerialPort;
+		SerialPort = Settings.MauiSerialPort;
 		var result = MauiSerialPort.GetPortNames();
 		if(result==null)
 			Snackbar.Add("未检测到串口,请插入设备并点击刷新!",Severity.Error);
@@ -77,10 +76,12 @@
 				SerialPort.Close();
 				await Task.Delay(500);
 				Snackbar.Add("断开成功!", Severity.Success);
+				Logger.LogInformation("断开串口");
 			}
 			catch
 			{
 				Snackbar.Add("断开失败,请重新尝试!", Severity.Error);
+				Logger.LogError("断开错误异常");
 			}
 		}
 		else
@@ -90,6 +91,7 @@
 				await	SerialPort.Open();
 				await Task.Delay(500);
 				Snackbar.Add("连接成功!", Severity.Success);
+				Logger.LogInformation($"用户连接串口:{SerialPort.PortName}");
 			}
 			catch
 			{
