--- a/SerialSync/Components/Pages/SerialPortSetting.razor
+++ b/SerialSync/Components/Pages/SerialPortSetting.razor
@@ -1,5 +1,5 @@
 ﻿@inject ISnackbar Snackbar
-@inject Logger<SerialPortSetting> Logger
+@inject ILogger<SerialPortSetting> Logger
 <MudPaper Outlined Width="100%" Height="100%" Class="pa-1 my-1" >
 	<EditForm Model="SerialPort"  style="width:100%;height: 100%;min-height:100%" classlass="pa-1" OnValidSubmit="Commit">
 		<div class="d-flex justify-center align-center">
