--- a/SerialSync/wwwroot/css/app.css
+++ b/SerialSync/wwwroot/css/app.css
@@ -93,3 +93,165 @@ h1:focus {
     .button:hover {
         transform: scale(1.15);
     }
+
+
+#outer-barG {
+    height: 37px;
+    width: 299px;
+    border: 2px solid steelblue;
+    overflow: hidden;
+    background-color: khaki;
+    margin 0 auto 0 auto;
+}
+
+.bar-lineG {
+    background-color: coral;
+    float: left;
+    width: 18px;
+    height: 120px;
+    margin-right: 17px;
+    margin-top: -28px;
+    -moz-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.bar-animationG {
+    margin-left: 168px;
+    width: 168px;
+    -moz-animation-name: bar-animationG;
+    -moz-animation-duration: 4.8s;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-direction: linear;
+    -webkit-animation-name: bar-animationG;
+    -webkit-animation-duration: 4.8s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-direction: linear;
+    -ms-animation-name: bar-animationG;
+    -ms-animation-duration: 4.8s;
+    -ms-animation-iteration-count: infinite;
+    -ms-animation-direction: linear;
+    -o-animation-name: bar-animationG;
+    -o-animation-duration: 4.8s;
+    -o-animation-iteration-count: infinite;
+    -o-animation-direction: linear;
+    animation-name: bar-animationG;
+    animation-duration: 4.8s;
+    animation-iteration-count: infinite;
+    animation-direction: linear;
+}
+
+#front-barG {
+}
+
+@-moz-keyframes bar-animationG {
+    0% {
+        margin-left: -128px;
+        margin-top: -18px
+    }
+
+    100% {
+        margin-left: 340px;
+        margin-top: -18px
+    }
+}
+
+@-webkit-keyframes bar-animationG {
+    0% {
+        margin-left: -128px;
+        margin-top: -18px
+    }
+
+    100% {
+        margin-left: 340px;
+        margin-top: -18px
+    }
+}
+
+@-ms-keyframes bar-animationG {
+    0% {
+        margin-left: -128px;
+        margin-top: -18px
+    }
+
+    100% {
+        margin-left: 340px;
+        margin-top: -18px
+    }
+}
+
+@-o-keyframes bar-animationG {
+    0% {
+        margin-left: -128px;
+        margin-top: -18px
+    }
+
+    100% {
+        margin-left: 340px;
+        margin-top: -18px
+    }
+}
+
+@keyframes bar-animationG {
+    0% {
+        margin-left: -128px;
+        margin-top: -18px
+    }
+
+    100% {
+        margin-left: 340px;
+        margin-top: -18px
+    }
+}
+
+.wrap {
+    width: 300px;
+    height: 800px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.spacer {
+    height: 40%;
+}
+
+h2 {
+    text-align: center;
+    font-family: 'Alegreya Sans SC', sans-serif;
+    font-weight: 300;
+    font-size: 26px;
+}
+
+.background {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(45deg, #ff6b6b, #4ecdc4, #45b7d1, #96c93d);
+    background-size: 400% 400%; /* 放大背景以便动画 */
+    animation: rainbow 10s infinite;
+}
+
+@keyframes rainbow {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+/* 确保内容在前景 */
+.wrap {
+    position: relative;
+    z-index: 1;
+    text-align: center;
+}
